splunk/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splunk-ingress
  namespace: splunk
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx # Adjust if using a different Ingress controller
  tls:
    - hosts:
        - splunk.secyour.space
  rules:
    - host: splunk.secyour.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: splunk-standalone-service
                port:
                  number: 8000
